# SIC-XE-assembler

./: .gitignore  CMakeLists.txt  README.md  setup_build.sh
include/: addressing_mode.hpp  assembler.hpp  control_section.hpp  directive.hpp  error.hpp  error_handler.hpp  instruction.hpp  line.hpp  literal.hpp  literal_parser.hpp  literal_table.hpp  opcode_encoder.hpp  pass1.hpp  pass2.hpp  register_encoder.hpp  result.hpp  symbol.hpp  symbol_table.hpp  warning_handler.hpp
samples/: test_30byte_limit.asm  test_60byte_limit.asm  test_abs_vs_rel.asm  test_addressing_modes.asm  test_all_format2.asm  test_base_directive.asm  test_base_mixed.asm  test_base_switch.asm  test_basic.asm  test_beck_addressing.asm  test_boundary_60.asm  test_byte_30byte_limit.asm  test_byte_edge_cases.asm  test_byte_text_records.asm  test_consecutive_reserved.asm  test_csect_complex.asm  test_csect_comprehensive.asm  test_csect_features.asm  test_csect_simple.asm  test_csect_vs_start.asm  test_directives.asm  test_equ_basic.asm  test_equ_comprehensive.asm  test_equ_formats.asm  test_error_display.asm  test_errors.asm  test_exact_30bytes.asm  test_extref_format_error.asm  test_format2_registers.asm  test_format4.asm  test_format4_boundary.asm  test_format4_indexed.asm  test_immediate_ranges.asm  test_inline_comments.asm  test_literal_dedup.asm  test_literal_edge_cases.asm  test_literal_errors.asm  test_literals.asm  test_literals_base.asm  test_long_names.asm  (+23 more)
src/: addressing_mode.cpp  assembler.cpp  directive.cpp  error_handler.cpp  instruction.cpp  literal_parser.cpp  literal_table.cpp  main.cpp  (+6 more)
